--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -7,5 +7,23 @@
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
 
+.rounded-circle {
+    border-radius: 50% !important;
+    width: 120px;
+    height: 120px;
+}
+.card-box {
+    border-bottom: 2px solid #e7e7e7;
+    padding: 5px;
+    display: block;
+    margin-bottom: 5px;
+}
+.card {
+    text-align: center;
+}
+.card a {
+    color: #6a5c78;
+}
+
 // If you want to turn off dark background for syntax highlighting, comment or delete the below line.
 @import "minima/fastpages-dracula-highlight"; 
