--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,6 +429,16 @@ pre code { font-size: 15px !important; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
+.wrapper { padding-right: 30px; padding-left: 30px; margin: 0 auto; display: block; width: 80%; }
+
+.rounded-circle { border-radius: 50% !important; width: 120px; height: 120px; }
+
+.card-box { border-bottom: 2px solid #e7e7e7; padding: 5px; display: block; margin-bottom: 5px; }
+
+.card { text-align: center; }
+
+.card a { color: #6a5c78; }
+
 .language-python + .language-plaintext { border-left: 1px solid grey; margin-left: 1rem !important; }
 
 [class^="language-"]:not(.language-plaintext) pre, [class^="language-"]:not(.language-plaintext) code { background-color: #323443 !important; color: #f8f8f2; }
