--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -11,7 +11,7 @@
     padding-left: 30px;
     margin: 0 auto;
     display: block;
-    width: 80%;
+    max-width: 80% !important;
 }
 .rounded-circle {
     border-radius: 50% !important;
