--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,7 +429,7 @@ pre code { font-size: 15px !important; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
-.wrapper { padding-right: 30px; padding-left: 30px; margin: 0 auto; display: block; width: 80%; }
+.wrapper { padding-right: 30px; padding-left: 30px; margin: 0 auto; display: block; max-width: 80% !important; }
 
 .rounded-circle { border-radius: 50% !important; width: 120px; height: 120px; }
 
