--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -6,30 +6,8 @@
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
-.wrapper {
-    padding-right: 30px;
-    padding-left: 30px;
-    margin: 0 auto;
-    display: block;
-    max-width: 80% !important;
-}
-.rounded-circle {
-    border-radius: 50% !important;
-    width: 120px;
-    height: 120px;
-}
-.card-box {
-    border-bottom: 2px solid #e7e7e7;
-    padding: 5px;
-    display: block;
-    margin-bottom: 5px;
-}
-.card {
-    text-align: center;
-}
-.card a {
-    color: #6a5c78;
-}
+@import "bootstrap/bootstrap";
+@import "minima/member-style";
 
 // If you want to turn off dark background for syntax highlighting, comment or delete the below line.
 @import "minima/fastpages-dracula-highlight"; 
