--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,12 +9,13 @@
 
     {%- if titles_size > 0 -%}
     <ul class="nav nav-pills">
-    {%- for path in page_paths -%}
-    {%- assign my_page = site.pages | where: "path", path | first -%}
-    {%- if my_page.title -%}
-    <li class="nav-item"><a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
-    {%- endif -%}
-    {%- endfor -%}
+      <li class="nav-item"><a class="nav-link" href="{{ "/" | relative_url }}">Home</a></li>
+      {%- for path in page_paths -%}
+      {%- assign my_page = site.pages | where: "path", path | first -%}
+      {%- if my_page.title -%}
+      <li class="nav-item"><a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
+      {%- endif -%}
+      {%- endfor -%}
     </ul>
     {%- endif -%}
 	</header>
