--- a/_includes/post_list_image_card.html
+++ b/_includes/post_list_image_card.html
@@ -1,10 +1,14 @@
-<div class="card">
+<div class="row no-gutters">
   {%- if post.image -%}
-  <img class="card-img-top img-responsive" src="{{ post.image | relative_url }}" />
+  <div class="col-auto">
+      <img class="img-fluid" src="{{ post.image | relative_url }}" style="width: 300px; height: auto;" />
+  </div>
   {%- endif -%}
-  <div class="card-body">
-    <a href="{{ post.url | relative_url }}"><h3 class="card-title mt-0">{{ post.title | escape }}</h3></a>
-    <p class="card-text">{{ post.description }}</p>
-    <p class="card-text">{{ post.date | date: date_format }}</p>
+  <div class="col">
+      <div class="card-block px-2">
+          <a href="{{ post.url | relative_url }}"><h3 class="card-title">{{ post.title | escape }}</h3></a>
+          <p class="card-text">{{ post.description }}</p>
+      </div>
   </div>
 </div>
+<div class="card-footer w-100 text-muted">{{ post.date | date: date_format }}</div>
